--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ header{
     transition:0.3s;
 }
 
+.card:hover{
+    transform:translateY(-8px);
+}
+
 body.oscuro .card{
     background:#2c2c2c;
 }
@@ -113,6 +117,8 @@ button:hover{
     padding:20px;
     transition:0.4s ease;
     overflow:auto;
+    border-top-left-radius:25px;
+    border-bottom-left-radius:25px;
 }
 
 body.oscuro #panelCarrito{
@@ -164,7 +170,7 @@ input, select{
 
 <div class="card">
 <img src="https://i.imgur.com/5Aqgz7o.jpg">
-<h3>Hamburguesa Especial</h3>
+<h3>⭐ Hamburguesa Especial</h3>
 <p class="precio">$18.000</p>
 <button class="agregar" onclick="agregar('Hamburguesa Especial',18000)">Agregar</button>
 <button class="quitar" onclick="quitar('Hamburguesa Especial')">Quitar</button>
@@ -198,6 +204,13 @@ input, select{
 <input type="text" id="nombre" placeholder="Tu nombre">
 <input type="text" id="direccion" placeholder="Dirección">
 
+<select id="entrega">
+<option value="Domicilio">Domicilio</option>
+<option value="Recoger en tienda">Recoger en tienda</option>
+</select>
+
+<input type="time" id="hora">
+
 <select id="pago">
 <option value="Contra entrega">Contra entrega</option>
 <option value="Transferencia">Transferencia</option>
@@ -208,6 +221,8 @@ input, select{
 <button class="enviar" onclick="enviarWhatsApp()">Enviar Pedido</button>
 <button class="cerrar" onclick="cerrarCarrito()">Cerrar</button>
 </div>
+
+<audio id="sonidoAgregar" src="https://www.soundjay.com/buttons/sounds/button-3.mp3"></audio>
 
 <script>
 
@@ -224,6 +239,7 @@ carrito[nombre].cantidad++;
 }else{
 carrito[nombre]={precio:precio,cantidad:1};
 }
+document.getElementById("sonidoAgregar").play();
 guardar();
 actualizar();
 }
@@ -249,7 +265,15 @@ for(let item in carrito){
 let subtotal=carrito[item].precio*carrito[item].cantidad;
 total+=subtotal;
 contador+=carrito[item].cantidad;
-lista.innerHTML+=item+" x"+carrito[item].cantidad+" - $"+subtotal+"<br>";
+
+lista.innerHTML+=`
+<div style="margin-bottom:10px; border-bottom:1px solid #ccc; padding-bottom:5px;">
+<strong>${item}</strong><br>
+Cantidad: ${carrito[item].cantidad}<br>
+Subtotal: $${subtotal}<br>
+<button onclick="quitar('${item}')" style="background:red;color:white;padding:4px;border:none;border-radius:5px;">❌ Quitar</button>
+</div>
+`;
 }
 
 document.getElementById("total").innerText=total;
@@ -275,7 +299,14 @@ if(total==0){alert("Carrito vacío");return;}
 
 let nombre=document.getElementById("nombre").value;
 let direccion=document.getElementById("direccion").value;
+let entrega=document.getElementById("entrega").value;
+let hora=document.getElementById("hora").value;
 let pago=document.getElementById("pago").value;
+
+if(nombre=="" || direccion==""){
+alert("Por favor completa nombre y dirección");
+return;
+}
 
 let numeroPedido=Math.floor(Math.random()*10000);
 
@@ -288,11 +319,20 @@ mensaje+="- "+item+" x"+carrito[item].cantidad+"%0A";
 mensaje+="%0ATotal: $"+total;
 mensaje+="%0ACliente: "+nombre;
 mensaje+="%0ADirección: "+direccion;
+mensaje+="%0ATipo de entrega: "+entrega;
+mensaje+="%0AHora solicitada: "+hora;
 mensaje+="%0AMétodo de pago: "+pago;
 
 let numero="573144351069"; // CAMBIA TU NUMERO
 
 window.open("https://wa.me/"+numero+"?text="+mensaje);
+
+alert("🎉 ¡Gracias por preferirnos! Tu pedido fue enviado correctamente. Pronto nos comunicaremos contigo.");
+
+carrito = {};
+guardar();
+actualizar();
+cerrarCarrito();
 
 }
 
