--- a/index.html
+++ b/index.html
@@ -70,17 +70,11 @@ button{
     border-radius:8px;
     cursor:pointer;
     margin:4px;
-    transition:0.2s;
-}
-
-button:hover{
-    transform:scale(1.05);
 }
 
 .agregar{background:#00a000;color:white;}
 .quitar{background:#d00000;color:white;}
 
-/* BOTON CARRITO */
 #botonCarrito{
     position:fixed;
     right:20px;
@@ -91,7 +85,6 @@ button:hover{
     border-radius:50%;
     font-size:22px;
     cursor:pointer;
-    box-shadow:0 4px 15px rgba(0,0,0,0.4);
 }
 
 #contador{
@@ -105,7 +98,6 @@ button:hover{
     font-size:12px;
 }
 
-/* PANEL */
 #panelCarrito{
     position:fixed;
     top:0;
@@ -119,10 +111,6 @@ button:hover{
     overflow:auto;
     border-top-left-radius:25px;
     border-bottom-left-radius:25px;
-}
-
-body.oscuro #panelCarrito{
-    background:#2c2c2c;
 }
 
 #panelCarrito.abierto{
@@ -147,41 +135,87 @@ input, select{
     padding:6px;
     margin:6px 0;
 }
-
-/* BOTON MODO OSCURO */
-#modoOscuro{
-    position:fixed;
-    left:20px;
-    bottom:20px;
-    background:#333;
-    color:white;
-    padding:12px;
-    border-radius:50%;
-    cursor:pointer;
-}
 </style>
 </head>
 
 <body>
 
-<header>🍔 TU NEGOCIO</header>
+<header>🔥 TU NEGOCIO</header>
 
 <div class="contenedor">
 
+<!-- PRODUCTOS -->
+
 <div class="card">
 <img src="https://i.imgur.com/5Aqgz7o.jpg">
-<h3>⭐ Hamburguesa Especial</h3>
+<h3>Hamburguesa</h3>
 <p class="precio">$18.000</p>
-<button class="agregar" onclick="agregar('Hamburguesa Especial',18000)">Agregar</button>
-<button class="quitar" onclick="quitar('Hamburguesa Especial')">Quitar</button>
+<button class="agregar" onclick="agregar('Hamburguesa',18000)">Agregar</button>
+<button class="quitar" onclick="quitar('Hamburguesa')">Quitar</button>
 </div>
 
 <div class="card">
 <img src="https://i.imgur.com/1bX5QH6.jpg">
-<h3>Perro Caliente</h3>
-<p class="precio">$12.000</p>
-<button class="agregar" onclick="agregar('Perro Caliente',12000)">Agregar</button>
-<button class="quitar" onclick="quitar('Perro Caliente')">Quitar</button>
+<h3>Aplastado de Pollo</h3>
+<p class="precio">$20.000</p>
+<button class="agregar" onclick="agregar('Aplastado de Pollo',20000)">Agregar</button>
+<button class="quitar" onclick="quitar('Aplastado de Pollo')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/1bX5QH6.jpg">
+<h3>Aplastado Ropa Vieja</h3>
+<p class="precio">$22.000</p>
+<button class="agregar" onclick="agregar('Aplastado Ropa Vieja',22000)">Agregar</button>
+<button class="quitar" onclick="quitar('Aplastado Ropa Vieja')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/5Aqgz7o.jpg">
+<h3>Pincho Pollo</h3>
+<p class="precio">$15.000</p>
+<button class="agregar" onclick="agregar('Pincho Pollo',15000)">Agregar</button>
+<button class="quitar" onclick="quitar('Pincho Pollo')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/5Aqgz7o.jpg">
+<h3>Pincho Mixto</h3>
+<p class="precio">$17.000</p>
+<button class="agregar" onclick="agregar('Pincho Mixto',17000)">Agregar</button>
+<button class="quitar" onclick="quitar('Pincho Mixto')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/5Aqgz7o.jpg">
+<h3>Costillas</h3>
+<p class="precio">$25.000</p>
+<button class="agregar" onclick="agregar('Costillas',25000)">Agregar</button>
+<button class="quitar" onclick="quitar('Costillas')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/5Aqgz7o.jpg">
+<h3>Chorizo</h3>
+<p class="precio">$10.000</p>
+<button class="agregar" onclick="agregar('Chorizo',10000)">Agregar</button>
+<button class="quitar" onclick="quitar('Chorizo')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/5Aqgz7o.jpg">
+<h3>Porky Papas</h3>
+<p class="precio">$23.000</p>
+<button class="agregar" onclick="agregar('Porky Papas',23000)">Agregar</button>
+<button class="quitar" onclick="quitar('Porky Papas')">Quitar</button>
+</div>
+
+<div class="card">
+<img src="https://i.imgur.com/5Aqgz7o.jpg">
+<h3>Gaseosa</h3>
+<p class="precio">$5.000</p>
+<button class="agregar" onclick="agregar('Gaseosa',5000)">Agregar</button>
+<button class="quitar" onclick="quitar('Gaseosa')">Quitar</button>
 </div>
 
 </div>
@@ -192,9 +226,6 @@ input, select{
 <div id="contador">0</div>
 </div>
 
-<!-- BOTON MODO OSCURO -->
-<div id="modoOscuro" onclick="toggleModo()">🌙</div>
-
 <!-- PANEL -->
 <div id="panelCarrito">
 <h2>🛒 Tu Pedido</h2>
@@ -204,16 +235,8 @@ input, select{
 <input type="text" id="nombre" placeholder="Tu nombre">
 <input type="text" id="direccion" placeholder="Dirección">
 
-<select id="entrega">
-<option value="Domicilio">Domicilio</option>
-<option value="Recoger en tienda">Recoger en tienda</option>
-</select>
-
-<input type="time" id="hora">
-
 <select id="pago">
 <option value="Contra entrega">Contra entrega</option>
-<option value="Transferencia">Transferencia</option>
 <option value="Nequi">Nequi</option>
 <option value="Daviplata">Daviplata</option>
 </select>
@@ -222,16 +245,8 @@ input, select{
 <button class="cerrar" onclick="cerrarCarrito()">Cerrar</button>
 </div>
 
-<audio id="sonidoAgregar" src="https://www.soundjay.com/buttons/sounds/button-3.mp3"></audio>
-
 <script>
-
-let carrito = JSON.parse(localStorage.getItem("carrito")) || {};
-actualizar();
-
-function guardar(){
-localStorage.setItem("carrito", JSON.stringify(carrito));
-}
+let carrito = {};
 
 function agregar(nombre, precio){
 if(carrito[nombre]){
@@ -239,8 +254,6 @@ carrito[nombre].cantidad++;
 }else{
 carrito[nombre]={precio:precio,cantidad:1};
 }
-document.getElementById("sonidoAgregar").play();
-guardar();
 actualizar();
 }
 
@@ -251,7 +264,6 @@ if(carrito[nombre].cantidad<=0){
 delete carrito[nombre];
 }
 }
-guardar();
 actualizar();
 }
 
@@ -266,14 +278,7 @@ let subtotal=carrito[item].precio*carrito[item].cantidad;
 total+=subtotal;
 contador+=carrito[item].cantidad;
 
-lista.innerHTML+=`
-<div style="margin-bottom:10px; border-bottom:1px solid #ccc; padding-bottom:5px;">
-<strong>${item}</strong><br>
-Cantidad: ${carrito[item].cantidad}<br>
-Subtotal: $${subtotal}<br>
-<button onclick="quitar('${item}')" style="background:red;color:white;padding:4px;border:none;border-radius:5px;">❌ Quitar</button>
-</div>
-`;
+lista.innerHTML+=item+" x"+carrito[item].cantidad+" - $"+subtotal+"<br>";
 }
 
 document.getElementById("total").innerText=total;
@@ -288,55 +293,34 @@ function cerrarCarrito(){
 document.getElementById("panelCarrito").classList.remove("abierto");
 }
 
-function toggleModo(){
-document.body.classList.toggle("oscuro");
-}
-
 function enviarWhatsApp(){
-
 let total=document.getElementById("total").innerText;
 if(total==0){alert("Carrito vacío");return;}
 
 let nombre=document.getElementById("nombre").value;
 let direccion=document.getElementById("direccion").value;
-let entrega=document.getElementById("entrega").value;
-let hora=document.getElementById("hora").value;
 let pago=document.getElementById("pago").value;
 
-if(nombre=="" || direccion==""){
-alert("Por favor completa nombre y dirección");
-return;
-}
-
-let numeroPedido=Math.floor(Math.random()*10000);
-
-let mensaje="Pedido #"+numeroPedido+"%0A";
-
+let mensaje="Pedido:%0A";
 for(let item in carrito){
 mensaje+="- "+item+" x"+carrito[item].cantidad+"%0A";
 }
-
 mensaje+="%0ATotal: $"+total;
 mensaje+="%0ACliente: "+nombre;
 mensaje+="%0ADirección: "+direccion;
-mensaje+="%0ATipo de entrega: "+entrega;
-mensaje+="%0AHora solicitada: "+hora;
-mensaje+="%0AMétodo de pago: "+pago;
+mensaje+="%0APago: "+pago;
 
 let numero="573144351069"; // CAMBIA TU NUMERO
 
 window.open("https://wa.me/"+numero+"?text="+mensaje);
 
-alert("🎉 ¡Gracias por preferirnos! Tu pedido fue enviado correctamente. Pronto nos comunicaremos contigo.");
+alert("🎉 ¡Gracias por preferirnos! Tu pedido fue enviado correctamente.");
 
-carrito = {};
-guardar();
+carrito={};
 actualizar();
 cerrarCarrito();
-
 }
-
 </script>
 
 </body>
-</html>
+</html
